GearsetPOC/force-app/main/default/objects/Incident__c/fields/Safety_Issue__c.field-meta.xml
<CustomField>
    <fullName>Safety_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if the incident did or could have caused a safety issue</inlineHelpText>
    <label>Safety Issue</label>
    <type>Checkbox</type>
</CustomField>