GearsetPOC/force-app/main/default/objects/Incident__c/fields/Secondary_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Code__c</fullName>
    <inlineHelpText>select the most relevant secondary system code.</inlineHelpText>
    <label>Secondary Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Code__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A* - Air Production - Whole System</fullName>
            </value>
            <value>
                <fullName>AC - Compressors (Main and Auxiliary)</fullName>
            </value>
            <value>
                <fullName>AD - Air Dryers</fullName>
            </value>
            <value>
                <fullName>AH - Horn</fullName>
            </value>
            <value>
                <fullName>AP - Pipework (incl Hoses)</fullName>
            </value>
            <value>
                <fullName>AR - Reservoirs (other than brakes)</fullName>
            </value>
            <value>
                <fullName>AS - Pressure Switches, Governors and Regulators</fullName>
            </value>
            <value>
                <fullName>AV - Valves/Cocks (other than Brakes)</fullName>
            </value>
            <value>
                <fullName>B* - Brakes - Whole System</fullName>
            </value>
            <value>
                <fullName>B1 - Brake Disc</fullName>
            </value>
            <value>
                <fullName>BA - Actuator</fullName>
            </value>
            <value>
                <fullName>BB - Blocks/Pads</fullName>
            </value>
            <value>
                <fullName>BD - Rheostatic Braking and Brake Resistor</fullName>
            </value>
            <value>
                <fullName>BG - Gauges and Indicators (not cab)</fullName>
            </value>
            <value>
                <fullName>BH - Parking Brake</fullName>
            </value>
            <value>
                <fullName>BL - Callipers</fullName>
            </value>
            <value>
                <fullName>BP - Pipework, Hoses and Seals</fullName>
            </value>
            <value>
                <fullName>BR - Reservoirs (brakes)</fullName>
            </value>
            <value>
                <fullName>BT - Brake Panel (373) / Brake Control Unit (374)</fullName>
            </value>
            <value>
                <fullName>BV - Valves/Cocks/Governors</fullName>
            </value>
            <value>
                <fullName>C* - Car Body - Whole System</fullName>
            </value>
            <value>
                <fullName>CA - Bodyshell</fullName>
            </value>
            <value>
                <fullName>CB - Bodyside Windows</fullName>
            </value>
            <value>
                <fullName>CD - Streamline Panels (Underframe)</fullName>
            </value>
            <value>
                <fullName>CE - Emergency windows</fullName>
            </value>
            <value>
                <fullName>CG - Bodyside Panels/Skirts/Filler Covers</fullName>
            </value>
            <value>
                <fullName>CM - Nose Doors</fullName>
            </value>
            <value>
                <fullName>CN - Exterior Signage and Labels</fullName>
            </value>
            <value>
                <fullName>CR - Roof/Guttering/Drains</fullName>
            </value>
            <value>
                <fullName>CS - Snowscreens (373)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>