GearsetPOC/force-app/main/default/objects/Incident__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>insert the serial number of the component requiring a failure report</description>
    <inlineHelpText>insert the serial number of the component requiring a failure report</inlineHelpText>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>