GearsetPOC/force-app/main/default/objects/Incident__c/fields/Siemens_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Siemens_Attribution__c</fullName>
    <inlineHelpText>select the agreed Siemens attribution coding</inlineHelpText>
    <label>Siemens Attribution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0- not a technical incident</fullName>
            </value>
            <value>
                <fullName>2- train crew handling</fullName>
            </value>
            <value>
                <fullName>2D- train driver handling</fullName>
            </value>
            <value>
                <fullName>2T- train manager handling</fullName>
            </value>
            <value>
                <fullName>3O- fleet management (operations)</fullName>
            </value>
            <value>
                <fullName>3M- fleet management (maintenance)</fullName>
            </value>
            <value>
                <fullName>4I- infrastructure management</fullName>
            </value>
            <value>
                <fullName>4E- external influene (out of control)</fullName>
                <label>4E- external influence (out of control)</label>
            </value>
            <value>
                <fullName>5T- reliability (technical)</fullName>
            </value>
            <value>
                <fullName>5TS- reliability (technical) siemens</fullName>
            </value>
            <value>
                <fullName>5Q- reliability (quality)</fullName>
            </value>
            <value>
                <fullName>5QS- reliability (quality) siemens</fullName>
            </value>
            <value>
                <fullName>5R- reliability (repeat)</fullName>
            </value>
            <value>
                <fullName>5RS- reliability (repeat) siemens</fullName>
            </value>
            <value>
                <fullName>6T- availability (technical)</fullName>
            </value>
            <value>
                <fullName>6TS- availability (technical) siemens</fullName>
            </value>
            <value>
                <fullName>6Q- availability (quality)</fullName>
            </value>
            <value>
                <fullName>6QS- availability (quality) siemens</fullName>
            </value>
            <value>
                <fullName>6M- availability (maintenance)</fullName>
            </value>
            <value>
                <fullName>6R- availability (repeat)</fullName>
            </value>
            <value>
                <fullName>6RS- availability (repeat) siemens</fullName>
            </value>
            <value>
                <fullName>6O- availability (other)</fullName>
            </value>
            <value>
                <fullName>6OS- availability (other) siemens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>