GearsetPOC/force-app/main/default/objects/Incident__c/fields/Siemens_Closure_Comments__c.field-meta.xml
<CustomField>
    <fullName>Siemens_Closure_Comments__c</fullName>
    <inlineHelpText>keep closure comments short and relevant</inlineHelpText>
    <label>Siemens Closure Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>