GearsetPOC/force-app/main/default/objects/Incident__c/fields/Siemens_Lead_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Siemens_Lead_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>select user from Siemens leading the investigation.</inlineHelpText>
    <label>Siemens Lead Investigator</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.CompanyName</field>
            <operation>equals</operation>
            <value>Siemens</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Reliability_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>