GearsetPOC/force-app/main/default/objects/Incident__c/fields/Siemens_Payment__c.field-meta.xml
<CustomField>
    <fullName>Siemens_Payment__c</fullName>
    <inlineHelpText>select the agreed payment option</inlineHelpText>
    <label>Siemens Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
            <value>
                <fullName>etc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>