GearsetPOC/force-app/main/default/objects/Incident__c/fields/Siemens_Status__c.field-meta.xml
<CustomField>
    <fullName>Siemens_Status__c</fullName>
    <inlineHelpText>change the status to reflect the stage of the incident investigation (new incidents default to &#39;advised&#39;)</inlineHelpText>
    <label>Siemens Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advised</fullName>
            </value>
            <value>
                <fullName>Gathering data</fullName>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Awaiting Info SAG</fullName>
            </value>
            <value>
                <fullName>Awaiting info EIL</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>