GearsetPOC/force-app/main/default/objects/Incident__c/fields/Third_Party_Comments__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Comments__c</fullName>
    <inlineHelpText>Insert any comments from 3rd parties, eg SNCF, SNCB, suppliers etc</inlineHelpText>
    <label>Third Party Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>