GearsetPOC/force-app/main/default/objects/Incident__c/fields/TIGRE_code__c.field-meta.xml
<CustomField>
    <fullName>TIGRE_code__c</fullName>
    <description>select the most relevant TIGRE code (373 only)</description>
    <inlineHelpText>select the most relevant TIGRE code (373 only)</inlineHelpText>
    <label>TIGRE code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1- Control Systems</fullName>
            </value>
            <value>
                <fullName>2- Power Systems</fullName>
            </value>
            <value>
                <fullName>3- Comfort</fullName>
            </value>
            <value>
                <fullName>4- Body</fullName>
            </value>
            <value>
                <fullName>5- Doors</fullName>
            </value>
            <value>
                <fullName>6- Traction / Braking</fullName>
            </value>
            <value>
                <fullName>7- Safety Systems</fullName>
            </value>
            <value>
                <fullName>8- Pneumatic Systems</fullName>
            </value>
            <value>
                <fullName>9- Running Gear</fullName>
            </value>
            <value>
                <fullName>10- Computer Networks</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>5- Doors / Traction</fullName>
                <isActive>false</isActive>
                <label>5- Doors / Traction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>