GearsetPOC/force-app/main/default/objects/Incident__c/fields/Trailing_Half_Set__c.field-meta.xml
<CustomField>
    <fullName>Trailing_Half_Set__c</fullName>
    <inlineHelpText>select the trailing halfset at the time of the incident</inlineHelpText>
    <label>Trailing Half Set</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fleet__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3xxx</fullName>
            </value>
            <value>
                <fullName>4xxx</fullName>
            </value>
            <value>
                <fullName>3001</fullName>
            </value>
            <value>
                <fullName>3002</fullName>
            </value>
            <value>
                <fullName>3003</fullName>
            </value>
            <value>
                <fullName>3004</fullName>
            </value>
            <value>
                <fullName>3005</fullName>
            </value>
            <value>
                <fullName>3006</fullName>
            </value>
            <value>
                <fullName>3007</fullName>
            </value>
            <value>
                <fullName>3008</fullName>
            </value>
            <value>
                <fullName>3009</fullName>
            </value>
            <value>
                <fullName>3010</fullName>
            </value>
            <value>
                <fullName>3011</fullName>
            </value>
            <value>
                <fullName>3012</fullName>
            </value>
            <value>
                <fullName>3013</fullName>
            </value>
            <value>
                <fullName>3014</fullName>
            </value>
            <value>
                <fullName>3015</fullName>
            </value>
            <value>
                <fullName>3016</fullName>
            </value>
            <value>
                <fullName>3017</fullName>
            </value>
            <value>
                <fullName>3018</fullName>
            </value>
            <value>
                <fullName>3019</fullName>
            </value>
            <value>
                <fullName>3020</fullName>
            </value>
            <value>
                <fullName>3021</fullName>
            </value>
            <value>
                <fullName>3022</fullName>
            </value>
            <value>
                <fullName>3103</fullName>
            </value>
            <value>
                <fullName>3104</fullName>
            </value>
            <value>
                <fullName>3105</fullName>
            </value>
            <value>
                <fullName>3106</fullName>
            </value>
            <value>
                <fullName>3107</fullName>
            </value>
            <value>
                <fullName>3108</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>