GearsetPOC/force-app/main/default/objects/Incident__c/fields/Transbordement__c.field-meta.xml
<CustomField>
    <fullName>Transbordement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick if incident resulted in a transbordement</inlineHelpText>
    <label>Transbordement</label>
    <type>Checkbox</type>
</CustomField>