GearsetPOC/force-app/main/default/objects/Incident__c/fields/Unit_History__c.field-meta.xml
<CustomField>
    <fullName>Unit_History__c</fullName>
    <inlineHelpText>to include checks of previous defect history, repeat failures, recent maintenance and any relevant interventions.</inlineHelpText>
    <label>Unit History</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>