GearsetPOC/force-app/main/default/objects/Incident__c/fields/Working_notes_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Working_notes_Commentary__c</fullName>
    <description>Use this box as a notepad for any commetry during the incident investigation</description>
    <inlineHelpText>Use this box as a notepad for any commetry during the incident investigation</inlineHelpText>
    <label>Working notes / Commentary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>