GearsetPOC/force-app/main/default/objects/Incident__c/fields/X400_Pages__c.field-meta.xml
<CustomField>
    <fullName>X400_Pages__c</fullName>
    <inlineHelpText>Insert any 400 pages that were raised and are relevant to the incident</inlineHelpText>
    <label>400 Pages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>