GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Awaiting_Closure_E320.validationRule-meta.xml
<ValidationRule>
    <fullName>Awaiting_Closure_E320</fullName>
    <active>true</active>
    <description>Closure rules for E320</description>
    <errorConditionFormula>AND(
 ISPICKVAL( EIL_Status__c ,&quot;Awaiting Closure&quot;),
 ISPICKVAL( Fleet__c ,&quot;E320&quot;),
OR(
ISBLANK( Name),
ISBLANK( Incident_Date__c),
ISBLANK( Incident_Title__c),
ISBLANK( Initial_Report__c),
ISBLANK( Diagram__c),
ISBLANK( Delay_Minutes__c),
ISBLANK( Location__c),
LEN(Fault_Codes__c) = 0,
LEN(EQX_Work_Reports__c) = 0,
LEN(Crew_Report_Summary__c) = 0,
LEN(Unit_History__c) = 0,
ISPICKVAL( Primary_Code__c,&quot;&quot;), 
ISPICKVAL( Secondary_Code__c ,&quot;&quot;),
ISPICKVAL( Leading_Half_Set__c ,&quot;&quot;),
ISPICKVAL( Trailing_Half_Set__c ,&quot;&quot;),
ISBLANK( Root_Cause__c),
ISBLANK( Root_Cause_non_technical__c),
ISPICKVAL( Avoidable__c,&quot;&quot;),
LEN(Remedial_Action_Taken__c) = 0,
LEN(Recommendations__c) = 0,
Inform_Siemens__c=FALSE,
ISBLANK(EIL_Lead_Investigator__c),
LEN(EIL_Summary_Conclusion__c) = 0,
ISBLANK( Siemens_Lead_Investigator__c ),
LEN(Siemens_Summary_Conclusion__c) = 0,
ISPICKVAL( Siemens_Attribution__c ,&quot;&quot;),
ISPICKVAL( Reasonable_Time__c ,&quot;&quot;),
ISPICKVAL( Follow_Up_Actions__c, &quot;&quot;),
ISBLANK( Follow_Up_References__c ),
ISPICKVAL( Final_Attribution__c ,&quot;&quot;)
))</errorConditionFormula>
    <errorMessage>Cannot set to Awaiting Closure
Please ensure you have completed the Supporting Data, Analysis, Siemens and Closure sections</errorMessage>
</ValidationRule>