GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Awaiting_Closure_TMST_E300.validationRule-meta.xml
<ValidationRule>
    <fullName>Awaiting_Closure_TMST_E300</fullName>
    <active>true</active>
    <description>Closure rules for TMST/E300</description>
    <errorConditionFormula>AND(
 ISPICKVAL( EIL_Status__c ,&quot;Awaiting Closure&quot;),
NOT(ISPICKVAL( Fleet__c ,&quot;E320&quot;)),
OR(
ISBLANK( Name),
ISBLANK( Incident_Date__c),
ISBLANK( Incident_Title__c),
ISBLANK( Initial_Report__c ),
ISBLANK( Diagram__c ),
ISBLANK( Delay_Minutes__c),
ISBLANK( Location__c), 
ISPICKVAL( Fleet__c ,&quot;&quot;),
ISPICKVAL( Leading_Half_Set__c ,&quot;&quot;),
ISPICKVAL( Trailing_Half_Set__c ,&quot;&quot;),
ISPICKVAL( TIGRE_code__c ,&quot;&quot;),
ISBLANK(EIL_Lead_Investigator__c),
ISBLANK( EIL_Summary_Conclusion__c ),
ISPICKVAL( Follow_Up_Actions__c, &quot;&quot;),
ISBLANK( Follow_Up_References__c ),
ISPICKVAL( Final_Attribution__c ,&quot;&quot;)
))</errorConditionFormula>
    <errorMessage>Cannot set to Awaiting Closure
Please ensure you have completed the Supporting Data, Analysis and Closure sections</errorMessage>
</ValidationRule>