GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Closing.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing</fullName>
    <active>false</active>
    <errorConditionFormula>IF( ISPICKVAL( EIL_Status__c , &quot;Closed&quot;), ISBLANK( Closure_Comments__c ) ||  ISPICKVAL( Follow_Up_Actions__c , &quot;&quot;) ||    ISPICKVAL( Final_Attribution__c ,&quot;&quot;)  ,FALSE)</errorConditionFormula>
    <errorMessage>Please select a Follow up Action, a Final Attribution and complete the Closure Comments.</errorMessage>
</ValidationRule>