GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Follow_Up.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_Up</fullName>
    <active>true</active>
    <description>Checks the Follow up fields are completed correctly</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( Follow_Up_Actions__c ,&quot;None Reqd&quot;)), 
NOT(ISPICKVAL(Follow_Up_Actions__c ,&quot;&quot;)),
ISBLANK( Follow_Up_References__c )
)</errorConditionFormula>
    <errorDisplayField>Follow_Up_References__c</errorDisplayField>
    <errorMessage>Please add a Follow Up Reference</errorMessage>
</ValidationRule>