GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Knock_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Knock_Rule</fullName>
    <active>true</active>
    <description>Checks that a knock on incident has a parent incident assigned</description>
    <errorConditionFormula>AND(ISPICKVAL(EIL_Status__c, &quot;Knock on Delay&quot;),ISBLANK(Parent_Incident_No__c))</errorConditionFormula>
    <errorMessage>You must select a Parent Incident to assign the status &quot;Knock on Delay&quot;</errorMessage>
</ValidationRule>