GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Lock_closed_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_closed_record</fullName>
    <active>true</active>
    <description>If the EIL Status is Closed, then only the Post Closure Comments field can be edited, except by an Admin</description>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( EIL_Status__c),&quot;Closed&quot;),
OR( 
ISCHANGED( X400_Pages__c  ), 
ISCHANGED(  Aff_Leading_Vehicle__c ), 
ISCHANGED( Aff_Trailing_Vehicle__c  ), 
ISCHANGED(  RI_Allowable_Failure__c ), 
ISCHANGED( Cancellation_CHK__c ), 
ISCHANGED( Closure_Comments__c  ), 
ISCHANGED( RI_Comfort_Failure__c  ),
ISCHANGED(  RI_E320_Comfort_Failure__c ),
ISCHANGED( Crew_Report_Reqd__c  ),
ISCHANGED(  RI_Crew_Report_Specifics__c ),
ISCHANGED(  Crew_Report_Summary__c ),
ISCHANGED(  RI_Crew_Report_Type__c ),
ISCHANGED(  Date_Closed__c ),
ISCHANGED(  Delay_Minutes__c ),
ISCHANGED(  Diagram__c ),
ISCHANGED(  e320_Picklist__c ),
ISCHANGED(  EIL_Attribution__c ),
ISCHANGED(   Final_Attribution__c ),
ISCHANGED(  EIL_Lead_Investigator__c ),
ISCHANGED(  EIL_Status__c ),
ISCHANGED(  EIL_Summary_Conclusion__c ),
ISCHANGED(  EQX_Work_Reports__c ),
ISCHANGED(  ET_Lamp__c ),
ISCHANGED(  Fault_Codes__c ),
ISCHANGED(  Fault_Recreated__c ),
ISCHANGED(  Fleet__c ),
ISCHANGED(  Follow_Up_Actions__c ),
ISCHANGED(  Follow_Up_Comments__c ),
ISCHANGED(  Follow_Up_References__c ),
ISCHANGED(  Incident_Date__c ),
ISCHANGED(  Incident_Title__c ),
ISCHANGED(  Inform_Siemens__c ),
ISCHANGED(  Initial_Report__c),
ISCHANGED(  Leading_Half_Set__c ),
ISCHANGED(  Location__c ),
ISCHANGED(  RI_Late_Availability__c ),
ISCHANGED(  RI_Mission_Failure__c ),
ISCHANGED(  RI_Non_availability__c ),
ISCHANGED(  Non_Commercial_Failure__c ),
ISCHANGED(  Ops_Infrastructure__c ),
ISCHANGED(  Parent_Incident_No__c ),
ISCHANGED(  RI_Performance_Regime_Trigger__c ),
ISCHANGED(  Primary_Code__c ),
ISCHANGED(  Reasonable_Time__c ),
ISCHANGED(  Recommendations__c ),
ISCHANGED(  RI_Reliability_Failure__c ),
ISCHANGED(  Remedial_Action_Taken__c ),
ISCHANGED(  Root_Cause__c ),
ISCHANGED(  Safety_Issue__c ),
ISCHANGED(  Secondary_Code__c ),
ISCHANGED(  Siemens_Attribution__c ),
ISCHANGED(  Siemens_Closure_Comments__c ),
ISCHANGED(  Siemens_Lead_Investigator__c ),
ISCHANGED(  Siemens_Payment__c ),
ISCHANGED(  Siemens_Status__c ),
ISCHANGED(  Siemens_Summary_Conclusion__c ),
ISCHANGED(  Third_Party_Comments__c ),
ISCHANGED(  Trailing_Half_Set__c ),
ISCHANGED(  Transbordement__c ),
ISCHANGED(  Unit_History__c )
), 
$Profile.Name &lt;&gt; &quot;Eurostar Admin&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorDisplayField>X400_Pages__c</errorDisplayField>
    <errorMessage>When the EIL Status is Closed, only the Post Closure Comments can be edited</errorMessage>
</ValidationRule>