GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/RI_validate_diagram.validationRule-meta.xml
<ValidationRule>
    <fullName>RI_validate_diagram</fullName>
    <active>true</active>
    <description>validate the format of the diagram to ensure it matches the Train object format, ie 9014 NOT 9O14</description>
    <errorConditionFormula>OR (
BEGINS( UPPER(Diagram__c) ,&quot;9O&quot;),
BEGINS( UPPER(Diagram__c) ,&quot;9I&quot;)
)</errorConditionFormula>
    <errorDisplayField>Diagram__c</errorDisplayField>
    <errorMessage>Please use the numeric form of the diagram - ie 9014 not 9O14</errorMessage>
</ValidationRule>