GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Siemens_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Siemens_Review</fullName>
    <active>true</active>
    <errorConditionFormula>Not(Inform_Siemens__c) &amp;&amp;   ISPICKVAL( EIL_Status__c , &quot;Siemens Review&quot;)</errorConditionFormula>
    <errorMessage>Cannot select Siemens Review status without checking the &quot;Inform Siemens&quot; Check box</errorMessage>
</ValidationRule>