GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Siemens_users_cannot_edit_Incident_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Siemens_users_cannot_edit_Incident_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED( Incident_Date__c ), ($User.CompanyName = &#39;Siemens&#39;))</errorConditionFormula>
    <errorMessage>Siemens users can&#39;t edit  Incident Date feild</errorMessage>
</ValidationRule>