GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Siemens_users_cant_edit_Delay_minutes.validationRule-meta.xml
<ValidationRule>
    <fullName>Siemens_users_cant_edit_Delay_minutes</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED( Delay_Minutes__c ), 
( $User.CompanyName = &#39;Siemens&#39;) )</errorConditionFormula>
    <errorMessage>Siemens users can&#39;t edit  Delay Minutes feild</errorMessage>
</ValidationRule>