GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Siemens_users_cant_edit_Diagram.validationRule-meta.xml
<ValidationRule>
    <fullName>Siemens_users_cant_edit_Diagram</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED( Diagram__c ), 
( $User.CompanyName = &#39;Siemens&#39;) )</errorConditionFormula>
    <errorMessage>Siemens users can&#39;t edit  Diagram feild</errorMessage>
</ValidationRule>