GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Siemens_users_cant_edit_Incident_title.validationRule-meta.xml
<ValidationRule>
    <fullName>Siemens_users_cant_edit_Incident_title</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED(  Incident_Title__c ), 
( $User.CompanyName = &#39;Siemens&#39;) )</errorConditionFormula>
    <errorMessage>Siemens users can&#39;t edit  Incident Title feild</errorMessage>
</ValidationRule>