GearsetPOC/force-app/main/default/objects/Incident__c/validationRules/Siemens_users_cant_edit_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Siemens_users_cant_edit_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED(  Location__c ), 
( $User.CompanyName = &#39;Siemens&#39;) )</errorConditionFormula>
    <errorMessage>Siemens users can&#39;t edit  Location feild</errorMessage>
</ValidationRule>