GearsetPOC/force-app/main/default/objects/Incident__c/listViews/All_ReliabilityInc.listView-meta.xml
<ListView>
    <fullName>All_ReliabilityInc</fullName>
    <columns>NAME</columns>
    <columns>Incident_Title__c</columns>
    <columns>Incident_Date__c</columns>
    <columns>EIL_Status__c</columns>
    <columns>Modified_By__c</columns>
    <columns>Modified_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>